tests/transpiler/x/hs/list_nested_assign.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/list_nested_assign.hs:5:10: error:
    • No instance for (Num [[a0]]) arising from the literal ‘5’
    • In the expression: 5
      In an equation for ‘matrix’: matrix = 5
  |
5 | matrix = 5
  |          ^

/workspace/mochi/tests/transpiler/x/hs/list_nested_assign.hs:9:5: error:
    • Ambiguous type variable ‘a0’ arising from a use of ‘print’
      prevents the constraint ‘(Show a0)’ from being solved.
      Probable fix: use a type annotation to specify what ‘a0’ should be.
      Potentially matching instances:
        instance Show Ordering -- Defined in ‘GHC.Show’
        instance Show a => Show (Maybe a) -- Defined in ‘GHC.Show’
        ...plus 25 others
        ...plus 12 instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In a stmt of a 'do' block: print (((matrix !! 1) !! 0))
      In the expression: do print (((matrix !! 1) !! 0))
      In an equation for ‘main’: main = do print (((matrix !! 1) !! 0))
  |
9 |     print (((matrix !! 1) !! 0))
  |     ^^^^^
